# adventOfCode2020-cpp

./: CMakeLists.txt  README.md
day1/: main1a.cpp  main1b.cpp
day2/: main2.cpp
day3/: main3.cpp
day4/: main4.cpp
day5/: main5.cpp
day6/: main6.cpp
day7/: main7.cpp
day8/: main8.cpp
